--- a/src/MovieAngularJSApp/Config.json
+++ b/src/MovieAngularJSApp/Config.json
@@ -1,7 +1,7 @@
 ﻿{
     "Data": {
         "DefaultConnection": { 
-            "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=MoviesDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+            "ConnectionString": "Server=.;Database=MoviesDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
         }
     },
     "EntityFramework": {
